@@ -1,4 +1,4 @@
-java -cp "lib/*:service/*" i5.las2peer.tools.L2pNodeLauncher -p 9011 uploadStartupDirectory\(\'etc/startup\'\) \
+java -cp "lib/*:service/*" --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED i5.las2peer.tools.L2pNodeLauncher -p 9011 uploadStartupDirectory\(\'etc/startup\'\) \
 startService\(\'i5.las2peer.services.gamificationGameService.GamificationGameService@0.1\',\'gamificationgamepass\'\) \
 startService\(\'i5.las2peer.services.gamificationQuestService.GamificationQuestService@0.1\',\'gamificationquestpass\'\) \
 startService\(\'i5.las2peer.services.gamificationBadgeService.GamificationBadgeService@0.1\',\'gamificationbadgepass\'\) \
